fix syntax error for openshift

--- a/src/client/public/styles/main.css
+++ b/src/client/public/styles/main.css
@@ -27,3 +27,6 @@ body {
 .systemInfo{
     display: none;
 }
+footer > p {
+    text-align: center;
+}
